[package]
name = "rustris"
version = "0.3.2"
edition = "2021"
build = "build.rs"

[dependencies]
find_folder = "0.3.0"
strum = { version = "0.24", features = ["derive"] }
rand = "0.8"
rand_xoshiro = "0.6"
log = "0.4"
env_logger = { version = "0.10.0", default-features = false }
ggez = "0.8.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
