[package]
name = "blocks"
version = "0.3.2"
edition = "2021"
build = "build.rs"

[dependencies]
strum = { version = "0.26.2", features = ["derive"] }
rand = "0.8"
rand_xoshiro = "0.6"
log = "0.4"
env_logger = { version = "0.11.3", default-features = false }
ggez = "0.9.3"
once_cell = "1.17.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

